--- a/Autobus/View/AraçGirişView.xaml
+++ b/Autobus/View/AraçGirişView.xaml
@@ -1,17 +1,17 @@
-﻿<UserControl
+﻿<UserControl x:Class="Autobus.View.AraçGirişView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Converter="clr-namespace:Autobus.Converter"
     xmlns:Extensions="clr-namespace:Extensions;assembly=Extensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Autobus.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:Autobus.Model" xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
-    xmlns:Converter="clr-namespace:Autobus.Converter" x:Class="Autobus.View.AraçGirişView"
     d:DataContext="{d:DesignInstance Type={x:Type viewmodel:AraçGirişViewModel}}"
     d:DesignHeight="450" d:DesignWidth="800" UseLayoutRounding="True"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <Converter:NumberToSplitterVisibilityConverter x:Key="NumberToSplitterVisibilityConverter"/>
+        <Converter:NumberToSplitterVisibilityConverter x:Key="NumberToSplitterVisibilityConverter" />
     </UserControl.Resources>
     <Grid>
         <GroupBox Header="ARAÇ GİRİŞİ">
@@ -30,7 +30,7 @@
                     <TextBlock Text="ARAÇ AKTİF Mİ" />
                     <CheckBox IsChecked="{Binding Araç.Aktif}" />
                     <TextBlock Text="TOPLAM KOLTUK SAYISI" />
-                    <Extensions:NumericUpDownControl Minimum="0" SmallChange="1"
+                    <Extensions:NumericUpDownControl Minimum="1" SmallChange="1"
                         Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
                         Value="{Binding Araç.KoltukSayısı, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                     <TextBlock Text="BÖLME SAYISI" />
@@ -47,7 +47,7 @@
                         <StackPanel Orientation="Horizontal">
                             <TextBlock VerticalAlignment="Center" Text="ARAÇ GİR" />
                             <Image Width="32" Height="32"
-                                    Source="/Resources/car.png" />
+                                Source="/Resources/car.png" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -60,7 +60,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Text="MARKA GİR" />
                                 <Image Width="32" Height="32"
-                                        Source="/Resources/car.png" />
+                                    Source="/Resources/car.png" />
                             </StackPanel>
                         </Button>
                     </StackPanel>
@@ -92,7 +92,9 @@
                         </Grid>
                         <Grid Grid.Row="1">
                             <ContentControl Content="{Binding}" ContentTemplate="{StaticResource AraçÖnizleme}" />
-                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Visibility="{Binding BölmeSayısı, Converter={StaticResource NumberToSplitterVisibilityConverter}}">
+                            <StackPanel HorizontalAlignment="Center"
+                                Orientation="Horizontal"
+                                Visibility="{Binding BölmeSayısı, Converter={StaticResource NumberToSplitterVisibilityConverter}}">
                                 <Separator Background="Black" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
                             </StackPanel>
                         </Grid>
