--- a/Autobus/View/YolcuDüzenView.xaml
+++ b/Autobus/View/YolcuDüzenView.xaml
@@ -1,13 +1,17 @@
-﻿<UserControl x:Class="Autobus.View.YolcuDüzenView"
+﻿<UserControl
+    x:Class="Autobus.View.YolcuDüzenView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Extensions="clr-namespace:Extensions;assembly=Extensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Autobus.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:model="clr-namespace:Autobus.Model" xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
+    xmlns:model="clr-namespace:Autobus.Model"
+    xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
     d:DataContext="{d:DesignInstance Type={x:Type viewmodel:YolcuDüzenViewModel}}"
-    d:DesignHeight="450" d:DesignWidth="800" UseLayoutRounding="True"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    UseLayoutRounding="True"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Extensions:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
@@ -20,7 +24,8 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <StackPanel>
-                    <ComboBox x:Name="CbSefer"
+                    <ComboBox
+                        x:Name="CbSefer"
                         HorizontalContentAlignment="Stretch"
                         ItemTemplate="{StaticResource ComboBoxItemSeferTemplate}"
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
@@ -36,7 +41,8 @@
                             </Style>
                         </ComboBox.ItemContainerStyle>
                     </ComboBox>
-                    <ComboBox x:Name="CbAraç"
+                    <ComboBox
+                        x:Name="CbAraç"
                         IsEnabled="False"
                         ItemTemplate="{StaticResource AraçTemplate}"
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
@@ -49,8 +55,11 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Canvas Width="96" Height="96"
-                        HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                    <Canvas
+                        Width="96"
+                        Height="96"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Bottom"
                         Background="{StaticResource Direksiyon}"
                         RenderTransformOrigin="0.5,0.5">
                         <Canvas.RenderTransform>
@@ -62,20 +71,24 @@
                             </TransformGroup>
                         </Canvas.RenderTransform>
                     </Canvas>
-                    <ContentControl Grid.Column="1"
+                    <ContentControl
+                        Grid.Column="1"
                         Content="{Binding}"
                         RenderTransformOrigin="0.5,0.5">
                         <ContentControl.ContentTemplate>
                             <DataTemplate>
-                                <ItemsControl Grid.Row="1"
+                                <ItemsControl
+                                    Grid.Row="1"
                                     Margin="0,3,0,0"
                                     ItemsSource="{Binding KoltukÖnizlemeListe}"
                                     Style="{StaticResource VirtualizingStackPanelItemsControl}">
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Width="75" Height="75">
-                                                <TextBlock HorizontalAlignment="Center"
-                                                    FontSize="16" FontWeight="Bold"
+                                                <TextBlock
+                                                    HorizontalAlignment="Center"
+                                                    FontSize="16"
+                                                    FontWeight="Bold"
                                                     Visibility="{Binding DataContext.KoltukDolu, ConverterParameter=reverse, Converter={StaticResource NullToVisibilityConverter}, ElementName=Tb}">
                                                     <Hyperlink Command="{Binding YolcuDüzenViewModel.MüşteriEkleEkranı, Mode=OneWay, Source={StaticResource MainViewModel}}" Style="{StaticResource HyperLinkRed}">
                                                         <Hyperlink.CommandParameter>
@@ -89,9 +102,12 @@
                                                         <Run Text="{Binding Mode=OneWay}" />
                                                     </Hyperlink>
                                                 </TextBlock>
-                                                <TextBlock x:Name="Tb"
-                                                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                    FontSize="14" Foreground="White">
+                                                <TextBlock
+                                                    x:Name="Tb"
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    FontSize="14"
+                                                    Foreground="White">
                                                     <TextBlock.DataContext>
                                                         <MultiBinding Converter="{StaticResource KoltukNoMüşteriConverter}">
                                                             <Binding Mode="OneWay" />
@@ -103,7 +119,8 @@
                                                             <ListBox ItemsSource="{Binding Sipariş}">
                                                                 <ListBox.ItemTemplate>
                                                                     <DataTemplate>
-                                                                        <ComboBox ItemTemplate="{StaticResource ComboBoxItemSiparişTemplate}"
+                                                                        <ComboBox
+                                                                            ItemTemplate="{StaticResource ComboBoxItemSiparişTemplate}"
                                                                             ItemsSource="{Binding Otobüs.Ürünler.Ürün, Source={StaticResource MainViewModel}}"
                                                                             SelectedValue="{Binding ÜrünId}"
                                                                             SelectedValuePath="Id"
@@ -111,7 +128,9 @@
                                                                     </DataTemplate>
                                                                 </ListBox.ItemTemplate>
                                                             </ListBox>
-                                                            <Image MaxWidth="128" MaxHeight="128"
+                                                            <Image
+                                                                MaxWidth="128"
+                                                                MaxHeight="128"
                                                                 Source="{Binding Resim, Converter={StaticResource FilePathMergeConverter}}" />
                                                         </StackPanel>
                                                     </TextBlock.ToolTip>
@@ -137,7 +156,7 @@
                                     </ItemsControl.ItemTemplate>
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <UniformGrid Columns="{Binding BölmeSayısı}" Rows="{Binding BoyKoltukSayısı}" />
+                                            <Extensions:VirtualizingTilePanel Columns="{Binding BölmeSayısı}" Tile="False" />
                                         </ItemsPanelTemplate>
                                     </ItemsControl.ItemsPanel>
                                 </ItemsControl>
